[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "countgpt"
version = "0.1.0"
description = "A CLI tool to count tokens in text files"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "tiktoken",
    "click",
]

[project.scripts]
countgpt = "countgpt.cli:main"

[tool.setuptools]
packages = ["countgpt"]
include-package-data = true

[tool.setuptools.package-data]
countgpt = ["assets/*"]
